hphp/test/zend/good/ext-posix/posix_times.php
<?php
    var_dump(posix_times());
?>
===DONE===