hphp/test/zend/bad/ext-curl/curl_basic_016.php
<?php
  $ch   = curl_init();
  $info = curl_getinfo($ch);
  var_dump($info);
?>
===DONE===